# discord-sightline

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  PRIVACY_POLICY.md  README.md  sightline.example.tight.toml  sightline.example.toml
.cargo/: audit.toml  config.toml
scripts/: diagnose_validation_cases.py  validate_kfold.py  validate_leave_one_out.py  validate_tuning.py
src/: main.rs  ocr_space.rs
src/bot/: admin.rs  discord.rs  effects.rs  event_stream.rs  extract.rs  ledger.rs  mod.rs  runtime.rs  specimen_import.rs  worker.rs  worker_logging.rs  worker_preview.rs
src/cli/: augment.rs  benchmark.rs  mod.rs  ocr.rs  validation.rs
src/configuration/: app.rs  guild.rs  mod.rs  storage_codec.rs
src/image/: engine.rs  geometry.rs  knn.rs  matcher.rs  matcher_opt.rs  mod.rs  pipeline.rs  types.rs
