[package]
name = "discord-sightline"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
base64 = "0.22"
bytes = "1.6"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dashmap = "6.1"
dial9-tokio-telemetry = { version = "0.3", features = ["tracing-layer"] }
futures-util = "0.3"
fast_image_resize = { version = "6.0", default-features = false, features = ["image", "std"] }
getrandom = "0.2"
hex = "0.4"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
image_hasher = { version = "3.1", features = ["fast_resize_unstable"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "multipart", "rustls-tls", "stream"] }
rmp-serde = "1.3"
rustc-hash = "2.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
twilight-gateway = { version = "0.17.1", default-features = false, features = ["rustls-webpki-roots", "twilight-http", "zstd"] }
twilight-http = { version = "0.17.1", default-features = false, features = ["rustls-webpki-roots", "decompression"] }
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", default-features = false, features = ["permission-calculator"] }
url = "2.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[features]
default = ["nightly-simd"]
nightly-simd = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false
debug = false
strip = true
panic = "abort"

[profile.release-fat-lto]
inherits = "release"
lto = "fat"
